unpackaged/main/default/objects/PKB_Article_Feedback_Deflection__c/PKB_Article_Feedback_Deflection__c.object-meta.xml
<CustomObject>
    <description>Stores data about feedback provided to an article and any customer deflection the article may have contributed to.</description>
    <label>PKB Article Deflection</label>
    <nameField>
        <displayFormat>AFD-{0000000}</displayFormat>
        <label>PKB Article Feedback &amp; Deflection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PKB Article Deflection</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>