unpackaged/main/default/objects/PKB_Article_Feedback_Deflection__c/fields/Article_ID__c.field-meta.xml
<CustomField>
    <fullName>Article_ID__c</fullName>
    <label>Article ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>