unpackaged/main/default/objects/PKB_Article_Feedback_Deflection__c/fields/Channel__c.field-meta.xml
<CustomField>
    <fullName>Channel__c</fullName>
    <description>Channel on which the record has been created. Value can be Web or Mobile.</description>
    <inlineHelpText>Channel on which the record has been created.</inlineHelpText>
    <label>Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>web</fullName>
                <default>true</default>
                <label>web</label>
            </value>
            <value>
                <fullName>mobile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>