unpackaged/main/default/objects/PKB_Article_Feedback_Deflection__c/fields/Comments__c.field-meta.xml
<CustomField>
    <fullName>Comments__c</fullName>
    <label>Comments</label>
    <length>7000</length>
    <type>LongTextArea</type>
</CustomField>