unpackaged/main/default/objects/PKB_Article_Feedback_Deflection__c/fields/Deflection__c.field-meta.xml
<CustomField>
    <fullName>Deflection__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deflection</label>
    <type>Checkbox</type>
</CustomField>