unpackaged/main/default/objects/PKB_Article_Feedback_Deflection__c/fields/Feedback_Source__c.field-meta.xml
<CustomField>
    <fullName>Feedback_Source__c</fullName>
    <label>Feedback Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ContactUs</fullName>
            </value>
            <value>
                <fullName>Search</fullName>
            </value>
            <value>
                <fullName>RelatedArticle</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>