unpackaged/main/default/objects/PKB_Article_Feedback_Deflection__c/fields/Keyword_Searched__c.field-meta.xml
<CustomField>
    <fullName>Keyword_Searched__c</fullName>
    <description>Keyword searched, if any, prior to the user entering this feedback or deflection.</description>
    <inlineHelpText>Keyword searched, if any, prior to the user entering this feedback or deflection.</inlineHelpText>
    <label>Keyword Searched</label>
    <length>255</length>
    <type>Text</type>
</CustomField>