unpackaged/main/default/objects/PKB_Article_Feedback_Deflection__c/fields/Session_ID__c.field-meta.xml
<CustomField>
    <fullName>Session_ID__c</fullName>
    <label>Session ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>